[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/level_parts/scary_level_parts/skinwalker.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_assets/Creepster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sound_effects/ambient/arons_quantum_noise.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[node name="skinwalker" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.73757, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954865, 0 )

[node name="SpotLight" type="SpotLight" parent="head/Camera"]
transform = Transform( 1.91069e-15, -1, -8.35187e-23, 1, 1.91069e-15, -4.37114e-08, 4.37114e-08, 0, 1, 0, 0, 0 )
spot_range = 7.72557
spot_angle = 44.1441

[node name="pause" type="Control" parent="." groups=["scary_pause_menu"]]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -252.0
margin_right = 309.0
margin_bottom = 252.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="pause/Panel/VBoxContainer"]
margin_right = 618.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "You're in the"
align = 1

[node name="Label2" type="Label" parent="pause/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 618.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 3 )
text = "PAUSE MENU"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="pause/Panel/VBoxContainer"]
margin_top = 198.0
margin_right = 618.0
margin_bottom = 265.0
custom_constants/margin_top = 67

[node name="VBoxContainer" type="VBoxContainer" parent="pause/Panel/VBoxContainer"]
margin_top = 269.0
margin_right = 618.0
margin_bottom = 462.0
custom_constants/separation = 37

[node name="CenterContainer" type="CenterContainer" parent="pause/Panel/VBoxContainer/VBoxContainer"]
margin_right = 618.0
margin_bottom = 78.0

[node name="Resume" type="Button" parent="pause/Panel/VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 209.0
margin_right = 409.0
margin_bottom = 78.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="CenterContainer2" type="CenterContainer" parent="pause/Panel/VBoxContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 618.0
margin_bottom = 193.0

[node name="menu" type="Button" parent="pause/Panel/VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 209.0
margin_right = 409.0
margin_bottom = 78.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.564807, 13.2596 )
stream = ExtResource( 3 )
unit_db = 14.0

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="pause/Panel/VBoxContainer/VBoxContainer/CenterContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="pause/Panel/VBoxContainer/VBoxContainer/CenterContainer2/menu" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
